--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ background-color: #31D0AA;
     z-index: 999;
     background: rgba(46, 47, 66, 0.4);
     opacity: 1;
-    pointer-events: none;
+    pointer-events: auto;
 }
 
 .modal-overlay.is-open {
@@ -554,17 +554,143 @@ background-color: #31D0AA;
     position: absolute;
     width: 408px;
     min-height: 584px;
-    background-color: #fff;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     border-radius: 4px;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    padding: 72px 24px 24px 24px;
 }
 
-.modal-label {
+.modal-btn-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    background-color: #e7e9fc;
+    border-color: rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
     display: flex;
+}
+
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.modal-form {}
+
+.modal-form-field {
+    margin-bottom: 8px;
+}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.modal-input-wrapper {
+    position: relative;
+}
+
+.modal-form-input {
+    display: block;
+    width: 360px;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: transparent;
+    padding: 11px 38px;
+}
+
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+}
+
+.modal-form-comment {
+    resize: none;
+    width: 100%;
+    outline: transparent;
+    padding: 11px 16px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    margin-bottom: 16px;
+}
+
+.modal-form-comment::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-btn-submit {
+    display: block;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    border: none;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+}
+
+.privacy-accent {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.modal-form-checkbox { 
+    cursor: pointer;
+    user-select: none;
+}
+
+.modal-form-checkbox input {
+    display: none;
+}
+
+.checkbox-square {
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    position: relative;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-square::after {
+    content: "";
+    position: absolute;
+    bottom: 110px;
+    left: 24px;
+    opacity: 0;
+
 }
 
 /* #endregion */
