--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,10 @@ align-items: baseline;
     width: 264px;
 }
 
+.footer-social {
+    margin-right:  80px;
+}
+
 .footer-social-title {
     font-weight: 500;
         font-size: 16px;
@@ -505,8 +509,33 @@ justify-content: center;
 background-color: #31D0AA;
 }
 
-.footer-button {
+.footer-form-subscribe {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
+
+.footer-label {
     display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+}
+
+.footer-input {
+    border: 1px solid #fff;
+        border-radius: 4px;
+        width: 264px;
+        height: 40px;
+        outline: transparent;
+        padding: 8px 16px;
+        background-color: #2e2f42;;
+}
+
+.footer-button {
+    display: flex;
     min-width: 165px;
     height: 40px;
     border-radius: 4px;
@@ -522,7 +551,22 @@ background-color: #31D0AA;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     margin: 0 auto;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+        
+.footer-button:hover,
+.footer-button:focus {
+    background-color: #404bbf;
+}
+
+.footer-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
 
 .footer-icon {
     fill: #FFFFFF;
@@ -543,6 +587,7 @@ background-color: #31D0AA;
     background: rgba(46, 47, 66, 0.4);
     opacity: 1;
     pointer-events: auto;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -567,14 +612,31 @@ background-color: #31D0AA;
     position: absolute;
     top: 24px;
     right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+
+    display: flex;
     justify-content: center;
     align-items: center;
+
+    border: none;
     border-radius: 100%;
     background-color: #e7e9fc;
     border-color: rgba(0, 0, 0, 0.1);
-    width: 24px;
-    height: 24px;
-    display: flex;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+    background-color: #404bbf;
+    color: #fff;
+}
+
+.modal-icon {
+    fill: currentColor;
 }
 
 .modal-title {
@@ -615,6 +677,11 @@ background-color: #31D0AA;
     border-radius: 4px;
     outline: transparent;
     padding: 11px 38px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+    border-color: #4d5ae5;
 }
 
 .modal-form-icon {
@@ -622,6 +689,13 @@ background-color: #31D0AA;
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
+    pointer-events: none;
+    fill: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+    fill: #4d5ae5;
 }
 
 .modal-form-comment {
@@ -634,6 +708,10 @@ background-color: #31D0AA;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     margin-bottom: 16px;
+}
+
+.modal-form-comment:focus {
+    border-color: #4d5ae5;
 }
 
 .modal-form-comment::placeholder {
@@ -655,7 +733,14 @@ background-color: #31D0AA;
     letter-spacing: 0.04em;
     text-align: center;
     color: #fff;
-}
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+.modal-btn-submit:hover,
+.modal-btn-submit:focus {
+        background-color: #404bbf;
+    }
 
 .privacy-accent {
     line-height: 1.33;
@@ -667,6 +752,7 @@ background-color: #31D0AA;
 .modal-form-checkbox { 
     cursor: pointer;
     user-select: none;
+    margin-bottom: 24px;
 }
 
 .modal-form-checkbox input {
@@ -680,17 +766,22 @@ background-color: #31D0AA;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     position: relative;
-    fill: transparent;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: transparent;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-square::after {
-    content: "";
-    position: absolute;
-    bottom: 110px;
-    left: 24px;
-    opacity: 0;
+input[type="checkbox"]:checked + .modal-form-label > .checkbox-square {
+    background-color: #404bbf;
+    border-color: #404bbf;
+    color: #f4f4fd;
+}
 
+.modal-checkbox-icon {
+fill: currentColor;
 }
 
 /* #endregion */
