--- a/css/style.css
+++ b/css/style.css
@@ -509,18 +509,33 @@ justify-content: center;
 background-color: #31D0AA;
 }
 
-.footer-form-subscribe {
+.form-subscribe {
     display: flex;
     gap: 24px;
     align-items: center;
 }
 
 .footer-label {
-    display: block;
+display:
     margin-bottom: 8px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #fff;
+}
+
+.footer-wrapper-input {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-left: auto;
+}
+
+.footer-wrapper-input::placeholder{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     color: #fff;
 }
 
@@ -531,7 +546,7 @@ background-color: #31D0AA;
         height: 40px;
         outline: transparent;
         padding: 8px 16px;
-        background-color: #2e2f42;;
+        background-color: transparent;
 }
 
 .footer-button {
@@ -585,9 +600,9 @@ background-color: #31D0AA;
     height: 100%;
     z-index: 999;
     background: rgba(46, 47, 66, 0.4);
-    opacity: 1;
-    pointer-events: auto;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -606,6 +621,7 @@ background-color: #31D0AA;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-close {
@@ -615,17 +631,17 @@ background-color: #31D0AA;
     width: 24px;
     height: 24px;
     padding: 0;
+    cursor: pointer;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     border: none;
-    border-radius: 100%;
+    border-radius: 50%;
     background-color: #e7e9fc;
-    border-color: rgba(0, 0, 0, 0.1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -701,13 +717,18 @@ background-color: #31D0AA;
 .modal-form-comment {
     resize: none;
     width: 100%;
+    height: 120px;
     outline: transparent;
-    padding: 11px 16px;
+    padding: 8px 16px;
+    font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     margin-bottom: 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-comment:focus {
