--- a/css/style.css
+++ b/css/style.css
@@ -480,48 +480,39 @@ align-items: baseline;
 
 .footer-social-title {
     font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #fff;
-        margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
 }
 
 .footer-social-link {
     background-color: #4d5ae5;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-list {
-display: flex;
-gap: 16px;
-justify-content: center;
+    display: flex;
+    gap: 16px;
+    justify-content: center;
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-background-color: #31D0AA;
+    background-color: #31D0AA;
 }
 
 .form-subscribe {
     display: flex;
     gap: 24px;
     align-items: center;
-}
-
-.footer-label {
-display:
-    margin-bottom: 8px;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
 }
 
 .footer-wrapper-input {
@@ -547,6 +538,11 @@ display:
         outline: transparent;
         padding: 8px 16px;
         background-color: transparent;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
 }
 
 .footer-button {
@@ -600,8 +596,8 @@ display:
     height: 100%;
     z-index: 999;
     background: rgba(46, 47, 66, 0.4);
-    opacity: 0;
-    pointer-events: none;
+    opacity: 1;
+    pointer-events: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -641,7 +637,8 @@ display:
     border-radius: 50%;
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    transition: transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -649,10 +646,12 @@ display:
 .modal-btn-close:focus {
     background-color: #404bbf;
     color: #fff;
+    border: none;
 }
 
 .modal-icon {
     fill: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -671,14 +670,14 @@ display:
     margin-bottom: 8px;
 }
 
-.modal-form-label {
+.subscr-text {
     display: block;
-    margin-bottom: 4px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
+font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
 }
 
 .modal-input-wrapper {
@@ -686,7 +685,6 @@ display:
 }
 
 .modal-form-input {
-    display: block;
     width: 360px;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
