--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,8 @@ align-items: baseline;
 
 .footer-button {
     display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 165px;
     height: 40px;
     border-radius: 4px;
@@ -670,6 +672,10 @@ align-items: baseline;
     margin-bottom: 8px;
 }
 
+.modal-form-field-comment {
+    margin-bottom: 16px;
+}
+
 .subscr-text {
     display: block;
 font-weight: 500;
@@ -730,7 +736,6 @@ font-weight: 500;
     height: 120px;
     outline: transparent;
     padding: 8px 16px;
-    margin-bottom: 16px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -753,11 +758,11 @@ font-weight: 500;
     display: block;
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     border: none;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
-
+    cursor: pointer;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -792,23 +797,25 @@ font-weight: 500;
 
 .checkbox-square {
     display: inline-flex;
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    position: relative;
-    fill: transparent;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    width: 16px;
+    height: 16px;
     margin-right: 8px;
+
+    color: transparent;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+
+    cursor: pointer;
+
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type="checkbox"]:checked + .modal-form-label > .checkbox-square {
     background-color: #404bbf;
-    border: none
-    fill: #F4F4FD;
+    border: none;
+    color: #F4F4FD;
 }
 
 .modal-checkbox-icon {
