--- a/css/style.css
+++ b/css/style.css
@@ -723,7 +723,7 @@ font-weight: 500;
     transform: translateY(-50%);
     pointer-events: none;
     fill: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus + .modal-form-icon {
@@ -803,7 +803,7 @@ font-weight: 500;
     height: 16px;
     margin-right: 8px;
 
-    color: transparent;
+    fill: transparent;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
 
@@ -815,7 +815,7 @@ font-weight: 500;
 input[type="checkbox"]:checked + .modal-form-label > .checkbox-square {
     background-color: #404bbf;
     border: none;
-    color: #F4F4FD;
+    fill: #F4F4FD;
 }
 
 .modal-checkbox-icon {
