--- a/css/style-old.css
+++ b/css/style-old.css
@@ -1,215 +1,4 @@
 
-/* #region Hero */
-
-.hero-title {
-    color: #fff;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    margin-bottom: 48px;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 496px
-}
-
-.hero {
-    background-color: #2e2f42;
-    padding: 188px 0 188px;
-        background-image: linear-gradient( 
-            rgba(46, 47, 66, 0.7), 
-            rgba(46, 47, 66, 0.7)
-            ), 
-        url(../images/background-image.jpg);
-    max-width: 1440px;
-    background-size: cover;
-    background-position: center;
-    margin: 0 auto;
-    background-repeat: no-repeat;
-}
-
-.button {
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    padding: 16px 32px;
-    background-color: #4d5ae5;
-    color: #fff;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    cursor: pointer;
-    border-radius: 4px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    margin: 0 auto;
-    border: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,
-.button:focus {
-    background-color: #404bbf;
-}
-
-/* #endregion */
-
-/* #region Info */
-
-.page-info {
-    background-color: #fff;
-    padding: 120px 0 120px;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0, 0, 0, 0);
-    overflow: hidden;
-}
-
-.info-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.info-list {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-}
-
-.info-item {
-    width: calc((100% - 72px) / 4);
-}
-
-.info-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f4f4fd;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    width: 264px;
-    height: 112px;
-    margin-bottom: 8px;
-    
-}
-
-.info-icon {
-    display: block;
-    margin: 24px 0;
-}
-
-.info-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-/* #endregion */
-
-/* #region Team */
-
-.page-team {
-    background-color: #f4f4fd;
-    padding: 120px 0 120px;
-}
-
-.team-header {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-    margin-bottom: 72px;
-}
-
-.team-container {
-    background-color: #FFFFFF;
-    border-radius: 0 0 4px 4px;
-    padding: 32px 0px;
-}
-
-.team-list {
-    display: flex;
-    gap: 24px;
-}
-
-.team-title {
-    text-align: center;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.team-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
-    margin-bottom: 8px;
-}
-
-.team-item {
-    background-color: #FFFFFF;
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.team-list-icon {
-display: flex;
-gap: 24px;
-justify-content: center;
-}
-
-.team-link-icon {
-background-color: #4d5ae5;
-border-radius: 50%;
-width: 40px;
-height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-
-}
-
-.team-link-icon:hover,
-.team-link-icon:focus {
-    background-color: #404BBF;
-}
-
-.social-icon {
-    fill: #F4F4FD;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* #endregion */
-
 /* #region Portgolio */
 
 .page-portfolio {
@@ -303,11 +92,6 @@ border-bottom: 1px solid #e7e9fc;
 
 /* #region Footer */
 
-.page-footer {
-    background-color: #2e2f42;
-    padding: 100px 0 100px
-}
-
 .footer-container {
 display: flex;
 align-items: baseline;
@@ -373,6 +157,13 @@ align-items: baseline;
     display: flex;
     gap: 24px;
     align-items: center;
+}
+
+.subscribe-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
 }
 
 .footer-wrapper-input {
