--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ img {
 }
 /* #endregion */
 
+/* #region Container */
+
 .container {
     max-width: 320px;
     padding: 0 16px;
@@ -58,6 +60,8 @@ img {
         padding: 0 15px;
     }
 }
+
+/* #endregion */
 
 /* #region Header */
 
@@ -205,7 +209,9 @@ background-color: transparent;
     }
 }
 
-/* Mobile menu */
+/* #endregion */
+
+/* #region Mobile menu */
 
 .mobile-menu {
     position: fixed;
@@ -220,13 +226,14 @@ background-color: transparent;
     pointer-events: none;
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transform: translateX(100%);
 }
 
 .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    transform: translateX(0);
 }
 
 .mobile-menu-container {
@@ -261,23 +268,19 @@ background-color: transparent;
 
 .mobile-menu-nav {
     margin-bottom: auto;
-}
-
-
-.mobile-menu-nav-item {
-        margin-bottom: 40px;
-}
-
-.mobile-menu-nav-link {
-    display: block;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-     letter-spacing: 0.02em;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
-.mobile-menu-contact-item {
+
+.mobile-menu-nav-list .mobile-menu-nav-item:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.mobile-menu-contact-list .mobile-menu-contact-item:not(:last-child) {
     margin-bottom: 24px;
 }
 
@@ -292,7 +295,6 @@ background-color: transparent;
 
 .mobile-menu-social {
     margin-top: 48px;
-    margin-bottom: 40px;
 }
 
 .mobile-menu-social-list {
@@ -316,12 +318,527 @@ background-color: transparent;
     fill: #f4f4fd;
 }
 
-
-
 @media screen and (min-width: 768px) {
     .mobile-menu {
         display: none;
     }
+}
+
+/* #endregion */
+
+/* #region Hero  */
+
+.hero {
+    background-color: #2e2f42;
+    padding: 72px 0 72px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/background-image.jpg);
+    max-width: 320px;
+    background-size: cover;
+    background-position: center;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+}
+
+@media screen and (min-width:768px) {
+.hero {
+    padding: 112px 0 112px;
+    max-width: 768px;
+}
+}
+
+@media screen and (min-width:1158px) {
+    .hero {
+        padding: 188px 0 188px;
+        max-width: 1440px;
+    }
+}
+
+
+.hero-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+
+    margin-bottom: 72px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 216px;
+}
+
+@media screen and (min-width:768px) {
+    .hero-title {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+        max-width: 496px;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .hero-title {
+        font-size: 56px;
+        margin-bottom: 48px;
+        max-width: 496px;
+    }
+}
+
+.button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    background-color: #4d5ae5;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin: 0 auto;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:hover,
+.button:focus {
+    background-color: #404bbf;
+}
+
+/* #endregion */
+
+/* #region Info */
+
+.page-info {
+    background-color: #fff;
+    padding: 96px 0 96px;
+}
+
+@media screen and (min-width:1158px) {
+    .page-info {
+        padding: 120px 0 120px;
+    }
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+}
+
+.info-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+@media screen and (min-width:768px) {
+    .info-title {
+        text-align: left;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .info-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        align-items: start;
+    }
+}
+
+.info-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+}
+
+@media screen and (min-width:768px) {
+    .info-list {
+        flex-direction: row;
+        gap: 72px 24px;
+        flex-wrap: wrap;
+    }
+
+    .info-item {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .info-list {
+        display: flex;
+        align-items: center;
+        gap: 24px;
+    }
+    
+    .info-item {
+        width: calc((100% - 72px) / 4);
+    }
+}
+
+
+.info-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+
+}
+
+.info-icon {
+    display: block;
+    margin: 24px 0;
+}
+
+@media screen and (max-width: 1157px) {
+    .info-image {
+        display: none;
+    }
+
+    .info-icon {
+        display: none;
+    }
+}
+
+.info-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+@media screen and (min-width:1158px) {
+    .info-text {
+        font-weight: 400;
+    }
+}
+
+/* #endregion */
+
+/* #region Team */
+
+.page-team {
+    background-color: #f4f4fd;;
+    padding: 96px 0 96px;
+}
+
+@media screen and (min-width:1158px) {
+    .page-team {
+        padding: 120px 0 120px;
+    }
+}
+
+.team-header {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.team-container {
+    background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    padding: 32px 0px;
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+@media screen and (min-width:768px) {
+    .team-list {
+        gap: 64px 24px;
+        justify-content: center;
+    }  
+}
+
+.team-title {
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.team-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+    margin-bottom: 8px;
+}
+
+.team-item {
+    background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
+.team-list-icon {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+.team-link-icon {
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    ;
+
+}
+
+.team-link-icon:hover,
+.team-link-icon:focus {
+    background-color: #404BBF;
+}
+
+.social-icon {
+    fill: #F4F4FD;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* #endregion */
+
+
+/* #region Portfolio */
+
+
+
+/* #endregion */
+
+/* #region Footer */
+
+.page-footer {
+    background-color: #2e2f42;
+    padding: 96px 0 96px
+}
+
+@media screen and (min-width:1158px) {
+    .page-footer {
+        padding: 100px 0 100px
+    }
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
+
+@media screen and (min-width:768px) {
+    .footer-container {
+        flex-direction: row;
+        align-items: baseline;
+    }
+}
+
+
+.footer-logo .logo-part {
+    color: #f4f4fd;
+}
+
+.footer-logo {
+    display: block;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+@media screen and (min-width:768px) {
+    .footer-logo {
+        text-align: left;
+    }
+}
+
+.footer-text {
+    color: #f4f4fd;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    width: 288px;
+}
+
+@media screen and (min-width:768px) {
+    .footer-text {
+        width: 264px;
+    }
+}
+
+@media screen and (min-width:1158px) {
+    .footer-social {
+        margin-right: 80px;
+    }
+}
+
+
+
+.footer-social-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+@media screen and (min-width:768px) {
+    .footer-social-title {
+        text-align: left;
+    }
+}
+
+.footer-social-link {
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31D0AA;
+}
+
+.form-subscribe {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.subscribe-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.footer-wrapper-input {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-left: auto;
+}
+
+.footer-wrapper-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer-input {
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    outline: transparent;
+    padding: 8px 16px;
+    background-color: transparent;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 165px;
+    height: 40px;
+    border-radius: 4px;
+    padding: 8px 24px;
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin: 0 auto;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button:hover,
+.footer-button:focus {
+    background-color: #404bbf;
+}
+
+.footer-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+
+.footer-icon {
+    fill: #FFFFFF;
+    margin-left: 16px;
 }
 
 
